# 42-Rush02

./: .gitignore  CMakeLists.txt  Makefile  main.c  map.c  map.h  math.c  math.h  parser.c  parser.h  print_utils.c  print_utils.h  readme.md  split.c  string_utilities.c  string_utilities.h  string_utils.c  string_utils.h
includes/: map.h  parser.h  print_utils.h  string_utils.h
src/: main.c  math.c  parser.c  print_utils.c  string_utils.c
